# astra

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.forge  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.blkio.yml  docker-compose.yml  pytest.ini  quickstart.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  crates-dry-run.yml  dependency-review.yml  docs-ci.yml  docs-pages.yml  release.yml  rust-ci.yml  scripts-ci.yml
crates/astra-core/: Cargo.toml
crates/astra-core/src/: config.rs  errors.rs  hal.rs  io_budget.rs  lib.rs  memory.rs  metrics.rs  raft.rs  store.rs  tiering.rs  wal.rs  watch.rs
crates/astra-forge/: Cargo.toml
crates/astra-forge/src/: main.rs
crates/astra-proto/: Cargo.toml  build.rs
crates/astra-proto/proto/: admin.proto  raft.proto  rpc.proto
crates/astra-proto/proto/mvccpb/: kv.proto
crates/astra-proto/src/: lib.rs
crates/astractl/: Cargo.toml
crates/astractl/src/: main.rs  oidc_proxy.rs
crates/astrad/: Cargo.toml
crates/astrad/src/: main.rs
docs/: .gitignore  architecture.md  architecture.mdx  deployment.mdx  disaster-recovery.md  disaster-recovery.mdx  docs.json  etcd-replacement.mdx  getting-started.mdx  index.md  index.mdx  migration-handbook.md  migration-handbook.mdx  operations.md  operations.mdx  package-lock.json  package.json  quickstart.md
docs/.meta/: source-map.yaml
docs/.vitepress/: config.mjs
docs/concepts/: consistency-model.mdx  control-plane-compatibility.md  tenant-virtualization.mdx
docs/contribute/: adr-index.md  adr-index.mdx  contributing.md  contributing.mdx  docs-source-of-truth.md  docs-style-guide.mdx  release-process.mdx
docs/guides/: autotune-preview.mdx  deploy-k3s-cluster.mdx  deploy-k3s-single-node.mdx  deploy-k3s-with-astra.md  deploy-k3s-with-astra.mdx  deploy-omni-with-astra.mdx  disaster-recovery.mdx  migration-etcd-generic.mdx  migration-k3s.md  migration-k3s.mdx  migration-omni.md  performance-tuning.md
docs/internals/: architecture-overview.mdx  memory-and-backpressure.mdx  qos-and-lanes.md  raft-timeline.md  read-path.mdx  testing-and-validation-harness.mdx  tiering-and-s3.mdx  watch-ring.md  write-path.mdx
docs/operations/: auth-and-tenanting.md  auth-and-tenanting.mdx  backup-and-restore.md  backup-and-restore.mdx  deploy-local-compose.md  deploy-production.md  deploy-production.mdx  faq.mdx  monitoring-prometheus-grafana.md  monitoring-prometheus-grafana.mdx  profiles-and-auto-governor.md  troubleshooting.md  troubleshooting.mdx
docs/reference/api/: astra-admin-bulkload.md  etcd-kv-watch-lease.mdx  internal-raft.mdx
docs/reference/cli/: astra-forge.md  astractl.md  astractl.mdx  astrad.md  astrad.mdx
docs/reference/config/: docker-compose-reference.md  docker-compose-reference.mdx  env-vars.md  env-vars.mdx
docs/reference/metrics/: metric-catalog.md  metric-catalog.mdx  slo-sli-reference.md
docs/research/: benchmark-methodology.mdx  benchmark-results.mdx  design-decisions.mdx  index.mdx  migration-findings.mdx
docs/research/data/: benchmarks.json
refs/: .gitignore
refs/sandbox/grafana/dashboards/: astra-overview.json
refs/sandbox/omni/: README.md
refs/sandbox/omni/cluster/: astra-client-service.yaml  astra-metrics-service.yaml  astra-oidc-secret.example.yaml  astra-pdb.yaml  astra-peer-service.yaml  astra-statefulset.yaml  kustomization.yaml  namespace.yaml
refs/sandbox/omni/helm/: omni-astra-proxy-oidc.example.yaml  omni-etcd-key.example.yaml  omni-values.base.yaml  omni-values.instance.example.yaml
refs/sandbox/prometheus/: astra-single-node-alerts.yml  prometheus.yml
refs/scripts/: .gitignore  README.md  pyproject.toml
refs/scripts/deploy/: astra-archive-tier-backup.sh  astra-datastore-ready.sh  astra-single-node-stack.sh  deploy-k3s-single-node-remote.sh  deploy-k3s-single-node.sh  docker-compose.k3s-single-node.object-store.yml  docker-compose.k3s-single-node.production.yml
refs/scripts/deploy/lib/: common.sh
refs/scripts/docs/: README.md  check_docs_impact.py  sync_docs.py  sync_env_vars_doc.py  sync_metric_catalog.py  sync_source_map.py  validate_docs.py
refs/scripts/keycloak/: provision_omni_realm.py
refs/scripts/public/: README.md  export_public_repo.py  generate_public_reports.py  public-export-manifest.yaml  run_sparkify.sh  validate_public_hygiene.py
refs/scripts/release/: build-forge-image.sh  build-image.sh  publish-crates.sh  push-final-candidate.sh  push-forge-image.sh
refs/scripts/src/ctxctl/: __init__.py  cli.py  db.py  kb_ops.py  paths.py  state_ops.py
refs/scripts/tests/: test_ctxctl.py  test_validation_helpers.py
refs/scripts/validation/: bootstrap-phase6-host.sh  bootstrap-ubuntu24-host.sh  bootstrap-ubuntu24-remote.sh  build_phase10_matrix.py  build_phase11_matrix.py  build_phase12_matrix.py  build_phase6_matrix.py  build_phase8_matrix.py  build_phase9_matrix.py  build_validation_report_msg.py  compact_log.py  docker-compose.blkio.yml  docker-compose.image.yml  docker-compose.k3s-single-node.yml  docker-compose.phase6.yml  ghz-large-put-data.json  ghz-put-data.json  k3s-single-node-readiness.sh  phase10-run-all.sh  phase10-scenario-auto-governor.sh  phase10-scenario-ecosystem.sh  phase10-scenario-gray-failure.sh  phase10-scenario-qos-swapoff.sh  phase11-run-all.sh  phase11-scenario-docs-sandbox.sh  phase11-scenario-fleet-cutover.sh  phase11-scenario-forge-ux.sh  phase12-cleanup-host.sh  phase12-common.sh  phase12-run-all.sh  phase12-scenario-limitless-crucible.sh  phase12-scenario-list-streaming.sh  phase12-scenario-multiraft.sh  phase12-scenario-semantic-cache.sh  phase12-scenario-tombstone-soak.sh  phase12-scenario-watch-fanout.sh  phase2-common.sh  phase2-run-all.sh  phase2-scenario-b.sh  phase2-scenario-d.sh  (+23 more)
refs/scripts/validation/phase6/forge/: README.md
refs/scripts/validation/phase6/k8s/: churn-deployment.yaml  heartbeat-lease.yaml  kwok-node.yaml
refs/scripts/validation/phase6/omni/: README.md
refs/scripts/validation/proto/: rpc.proto
(+10 files in other folders)
