[workspace]
resolver = "2"
members = [
  "crates/astra-core",
  "crates/astra-proto",
  "crates/astra-forge",
  "crates/astrad",
  "crates/astractl",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.1-rc1"

[workspace.dependencies]
anyhow = "1.0.100"
aws-config = "1.8.10"
aws-sdk-s3 = { version = "1.124.0", default-features = true }
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
crc32c = "0.6.8"
futures = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
jemallocator = "0.5.4"
libc = "0.2.177"
multiversion = "0.8.0"
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }
parking_lot = "0.12.5"
prost = "0.14.3"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wasmtime = "38.0.4"

[workspace.dependencies.tonic-prost-build]
version = "0.14.5"

[workspace.dependencies.protoc-bin-vendored]
version = "3.2.0"
