[package]
name = "astra-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
astra-proto = { path = "../astra-proto" }
aws-config.workspace = true
aws-sdk-s3.workspace = true
bincode.workspace = true
bytes.workspace = true
crc32c.workspace = true
futures.workspace = true
jemallocator.workspace = true
libc.workspace = true
multiversion.workspace = true
openraft.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
