[package]
name = "astra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core datastore engine, Raft state machine, and control-plane semantics for Astra"
repository = "https://github.com/SparkAIUR/astra"
homepage = "https://github.com/SparkAIUR/astra"
readme = "../../README.md"
keywords = ["etcd", "raft", "kubernetes", "control-plane", "astra"]
categories = ["database-implementations"]

[dependencies]
anyhow.workspace = true
astra-proto = { version = "0.1.1-rc1", path = "../astra-proto" }
aws-config.workspace = true
aws-sdk-s3.workspace = true
bincode.workspace = true
bytes.workspace = true
crc32c.workspace = true
futures.workspace = true
jemallocator.workspace = true
libc.workspace = true
multiversion.workspace = true
openraft.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
