[package]
name = "astra-forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
astra-core = { path = "../astra-core" }
astra-proto = { path = "../astra-proto" }
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
clap.workspace = true
crc32c.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tonic.workspace = true
wasmtime.workspace = true
