[package]
name = "astra-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Migration and bulk-load tooling for converging external control-plane stores into Astra"
repository = "https://github.com/SparkAIUR/astra"
homepage = "https://github.com/SparkAIUR/astra"
readme = "../../README.md"
keywords = ["migration", "cli", "kubernetes", "etcd", "astra"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
anyhow.workspace = true
astra-core = { version = "0.1.1-rc1", path = "../astra-core" }
astra-proto = { version = "0.1.1-rc1", path = "../astra-proto" }
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
clap.workspace = true
crc32c.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tonic.workspace = true
wasmtime.workspace = true
