[package]
name = "astractl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line client for interacting with Astra and etcd-compatible endpoints"
repository = "https://github.com/SparkAIUR/astra"
homepage = "https://github.com/SparkAIUR/astra"
readme = "../../README.md"
keywords = ["cli", "etcd", "kubernetes", "grpc", "astra"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
astra-proto = { version = "0.1.0", path = "../astra-proto" }
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
