[package]
name = "astrad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
astra-core = { path = "../astra-core" }
astra-proto = { path = "../astra-proto" }
aws-config.workspace = true
aws-sdk-s3.workspace = true
clap.workspace = true
crc32c.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
openraft.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
